--- a/css/style.css
+++ b/css/style.css
@@ -724,6 +724,121 @@ margin-bottom: 8px;
     fill: currentColor;
 }
 
+/* MODAL FORM */
+.modal-form {
+    padding: 24px;
+    padding-top: 72px;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form .contacts {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color);
+
+    margin: 0;
+    margin-bottom: 16px;
+    padding: 0;
+}
+
+.modal-form-input-desc {
+    display: block;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    
+    padding: 0;
+    margin: 0;
+    margin-bottom: 4px;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 38px;
+    transition: border-color var(--transition);
+}
+
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-input:focus +.modal-form-input-icon {
+    color: var(--accent-color);
+}
+
+.modal-form-input-wrapper {
+    position: relative;
+    color: #2E2F42;
+}
+
+.modal-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    fill: currentColor;
+    display: block;
+    width: 18px;
+    height: 24px;
+    transition: color var(--transition);
+}
+
+.modal-form-field {
+    margin-bottom: 8px;
+}
+
+.modal-form-message {
+    resize: none;
+    width: 100%;
+    padding: 8px 16px;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color var(--transition);
+}
+
+.modal-form-message:placeholder {
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-message:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-fake-check {
+    position: relative;
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 1.25px solid #2E2F42;
+    border-radius: 2px;
+    /* background-color: var(--accent-color); */
+}
+
+.modal-form-check-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+    background-color: var(--accent-color);
+    opacity: 0;
+}
+
+.modal-form-check:checked .modal-form-check-icon {
+    opacity: 1;
+}
+
 /* visually-hidden */
 .visually-hidden {
  position: absolute;
